--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
                 <p>My Learning</p>
                 <div class="mylearning__popup">
                     <p>Not yet purchased anything</p>
+                    </div>
                 </div>
-            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
+            <div class="menu">
+            <i class="fa-solid fa-bars"></i>
+            </div>
         </div>
     </div>
     <div class="category">
@@ -69,7 +72,7 @@
             </div>
             <div class="course-card">
                 <img src="./images/recomend 3.jpg" alt="recomend 3">
-                <h2>FullStack Web Development-2025</h2>
+                <h2>2025-FullStack Development</h2>
                 <p>Agnel John</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>3500 <del>4999</del></p>
