--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
                 <p>My Learning</p>
                 <div class="mylearning__popup">
                     <p>Not yet purchased anything</p>
-                    </div>
                 </div>
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
+
+        </div>
+        <div class="menu__bar">
             <i class="fa-solid fa-bars"></i>
         </div>
     </div>
